--- a/celebration-countdown/index.html
+++ b/celebration-countdown/index.html
@@ -235,7 +235,7 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 
 
 		<div class="entry-content alignfull wp-block-post-content has-global-padding is-layout-constrained wp-block-post-content-is-layout-constrained">
-<p>A great way to celebrate the new year, is watching the time and joining in on the count down!</p>
+<p>A great way to celebrate the new year, is watching the time and joining in on the count down! 🙂</p>
 </div>
 		
 		<div class="wp-block-group has-global-padding is-layout-constrained wp-block-group-is-layout-constrained" style="padding-top:var(--wp--preset--spacing--60);padding-bottom:var(--wp--preset--spacing--60)">
